objects/TransactionCredit__x.object
<CustomObject>
    <fields>
        <fullName>CompensationDate__c</fullName>
        <description>CompensationDate</description>
        <externalDeveloperName>COMPENSATIONDATE</externalDeveloperName>
        <label>Compensation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreditValue__c</fullName>
        <description>CreditValue</description>
        <externalDeveloperName>CREDITVALUE</externalDeveloperName>
        <label>Credit Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerID__c</fullName>
        <externalDeveloperName>CUSTOMERID</externalDeveloperName>
        <label>Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <externalDeveloperName>COMPANYNAME</externalDeveloperName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventTypeID__c</fullName>
        <description>EvenType</description>
        <externalDeveloperName>EVENTTYPEID</externalDeveloperName>
        <label>EventType ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NoOfUnits__c</fullName>
        <description>NoOfUnits</description>
        <externalDeveloperName>NOOFUNITS</externalDeveloperName>
        <label>No. of Units</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <description>OpportunityID</description>
        <externalDeveloperName>OPPORTUNITYID</externalDeveloperName>
        <label>Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderID__c</fullName>
        <description>OrderID</description>
        <externalDeveloperName>TRANSACTIONID</externalDeveloperName>
        <label>Order ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYEEID__c</fullName>
        <description>PAYEEID</description>
        <externalDeveloperName>PAYEEID</externalDeveloperName>
        <label>Payee ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <description>Product name of the transaction loaded to Callidus</description>
        <externalDeveloperName>PRODUCTNAME</externalDeveloperName>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TransactionValue__c</fullName>
        <description>TransactionValue</description>
        <externalDeveloperName>TRANSACTIONVALUE</externalDeveloperName>
        <label>Transaction Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitTypeForCredit__c</fullName>
        <description>UnitTypeForCredit</description>
        <externalDeveloperName>UNITTYPEFORCREDIT</externalDeveloperName>
        <label>Unit Type For Credit</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitTypeForValue__c</fullName>
        <description>UnitTypeForValue</description>
        <externalDeveloperName>UNITTYPEFORVALUE</externalDeveloperName>
        <label>Unit Type For Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitType__c</fullName>
        <description>UnitType</description>
        <externalDeveloperName>UNITTYPE</externalDeveloperName>
        <label>Unit Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitValue__c</fullName>
        <description>UnitValue</description>
        <externalDeveloperName>UNITVALUE</externalDeveloperName>
        <label>Unit Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>